@@ -29,7 +29,12 @@ include::content/docs/variables.adoc-include[]
 
 icon:check[] Core: Fixed a bug in the link renderer that caused the language parameter to be ignored if the branch parameter was passed.
 
-icon:plus[] Docker: The Gentics Mesh server docker container has been updated. Additional group permissions will be set to the application folders to allow root group to access and write into those.
+icon:plus[] Docker: The Gentics Mesh server docker container has been updated:
+
+  * Additional group permissions will be set to the application folders to allow root 
+  group to access and write into those.
+  * It is now possible to run the container with any uid. The user for the specified UID will automatically be created. This change enhances OpenShift support for the docker containers.
+  * The embedded Elasticsearch folder has been removed from the server image. The embedded ES will automatically be extracted to the `/mesh/elasticsearch` folder when embedded mode is enabled.
 
 [[v1.3.2]]
 == 1.3.2 (12.12.2019)
